--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
 
     <title>Biker Zone</title>
 
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: '#da373d',
+              'bike-primary-bg': 'rgba(231, 111, 81, 0.10)',
+              'bike-primary': '#E76F51',
+            }
+          }
+        }
+      }
+    </script>
+
     <style>
         .font-poppins{
             font-family: 'Poppins', sans-serif;
@@ -22,9 +36,10 @@
 </head>
 <body class="font-Poppins">
 <!-- header section stards -->
-    <header>
+    <header class="md:container md:max-auto">
         <!-- navbar stards -->
-        <div class="navbar bg-base-100">
+        <nav>
+          <div class="navbar bg-base-100">
             <div class="flex-1">
               <div class="dropdown">
                 <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -48,14 +63,97 @@
               </ul>
             </div>
             <div class="">
-              <a class="btn btn-warning">Login</a>
+              <a class="btn btn-primary">Login</a>
             </div>
           </div>
+        </nav>
         <!-- navbar ends -->
+        <!-- slider or carousel -->
+        <div class="carousel w-full lg:h-[500px] bg-bike-primary-bg ">
+          <div id="slide1" class="carousel-item relative w-full">
+              <div class="flex flex-col lg:flex-row p-4  gap-20 lg:p-24">
+                <div class="space-y-7 flex-1">
+                  <h2 class="text-6xl font-bold">Ride-on R15 
+                    <br>
+                    V4 with Smile</h2>
+                    <p>Amet minim mollit non deserunt ullamco 
+                      est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                      <button class=" btn bg-bike-primary">Purchase</button>
+                </div>
+                <div class="flex-1">
+                  <img src="./images/slider/bike1.png" class="w-full" />
+                 </div>
+              </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide4" class="btn btn-circle">❮</a> 
+              <a href="#slide2" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide2" class="carousel-item relative w-full">
+            <!-- sild-2 -->
+            <div class="flex flex-col lg:flex-row p-4  gap-20 lg:p-24">
+              <div class="space-y-7 flex-1">
+                <h2 class="text-6xl font-bold">Ride-on R15 
+                  <br>
+                  V4 with Smile</h2>
+                  <p>Amet minim mollit non deserunt ullamco 
+                    est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    <button class=" btn bg-bike-primary">Purchase</button>
+              </div>
+              <div class="flex-1">
+                <img src="./images/slider/bike2.png" class="w-full" />
+               </div>
+            </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide1" class="btn btn-circle">❮</a> 
+              <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide3" class="carousel-item relative w-full">
+            <!-- slid-3 -->
+            <div class="flex flex-col lg:flex-row p-4  gap-20 lg:p-24">
+              <div class="space-y-7 flex-1">
+                <h2 class="text-6xl font-bold">Ride-on R15 
+                  <br>
+                  V4 with Smile</h2>
+                  <p>Amet minim mollit non deserunt ullamco 
+                    est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    <button class=" btn bg-bike-primary">Purchase</button>
+              </div>
+              <div class="flex-1">
+                <img src="./images/slider/bike3.png" class="w-full" />
+               </div>
+            </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide2" class="btn btn-circle">❮</a> 
+              <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide4" class="carousel-item relative w-full">
+            <!-- slid-4 -->
+            <div class="flex flex-col lg:flex-row p-4  gap-20 lg:p-24">
+              <div class="space-y-7 flex-1">
+                <h2 class="text-6xl font-bold">Ride-on R15 
+                  <br>
+                  V4 with Smile</h2>
+                  <p>Amet minim mollit non deserunt ullamco 
+                    est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    <button class=" btn bg-bike-primary">Purchase</button>
+              </div>
+              <div class="flex-1">
+                <img src="./images/slider/bike4.png" class="w-full" />
+               </div>
+            </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide3" class="btn btn-circle">❮</a> 
+              <a href="#slide1" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+        </div>
     </header>
 <!-- header section send -->
 <!-- nain section stards -->
-    <main>
+    <main class="md:container md:max-auto">
 
     </main>
 <!-- main section ends -->
